--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
+file-upload-path=/Users/HachNV/IdeaProjects/spring-blog/target/classes/static/uploads/
+spring.servlet.multipart.max-file-size=20MB
